# f1-dashboard

./: .gitignore  README.md  api.py  app.py  config.py  data_fetcher.py  data_processor.py  fastf1_service.py  gap_chart_data.py  main.py  pyproject.toml  replay_controls.py  replay_data.py  session_selector.py  standings_board.py  visibility_filter.py
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md
.planning/phases/01-backend-foundation/: 01-01-PLAN.md  01-02-PLAN.md  01-03-PLAN.md  01-04-SUMMARY.md  01-VALIDATION.md
.planning/phases/01-replay-data-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md  01-VALIDATION.md
.planning/phases/02-gap-chart-replay-engine/: 02-04-SUMMARY.md  02-RESEARCH.md
.planning/phases/02-replay-engine-and-controls/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-RESEARCH.md  02-VALIDATION.md  VERIFICATION.md
.planning/phases/03-standings-board/: 03-CONTEXT.md
.planning/phases/04-chart-enhancements/: 04-02-PLAN.md  04-02-SUMMARY.md
.planning/phases/05-dashboard-layout-stint-timeline/: 05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-VERIFICATION.md
.planning/phases/06-lap-time-chart-position-chart/: 06-01-SUMMARY.md  06-02-PLAN.md  06-CONTEXT.md  06-RESEARCH.md  06-VALIDATION.md  06-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
backend/: .gitignore  conftest.py  main.py  pyproject.toml
backend/models/: schemas.py
backend/routers/: schedule.py  sessions.py
backend/services/: cache_service.py  fastf1_service.py
backend/tests/: conftest.py  test_schedule.py  test_sectors.py  test_sessions.py
components/: __init__.py  standings_board.py
frontend/: package-lock.json  package.json  vitest.config.ts
frontend/__mocks__/: react-plotly.js.tsx
frontend/src/: App.css  App.test.tsx  App.tsx  index.css
tests/: conftest.py  test_api_gap_chart.py  test_api_jump_to_lap.py  test_api_lap_data.py  test_api_lap_durations.py  test_api_replay_start.py  test_api_sessions.py  test_api_standings.py  test_replay_controls.py  test_replay_foundation.py  test_sse_loading.py  test_standings_board.py
tests/fixtures/: replay_session.json
(+119 files in other folders)
