[project]
name = "f1-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastf1>=3.5.3",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "streamlit>=1.45.1",
]

[project.scripts]
f1-dashboard = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
